--- a/applications.yml
+++ b/applications.yml
@@ -6,4 +6,5 @@ eureka:
     service-url:
       default-zone: http://localhost:8761/eureka
   instance:
+    prefer-ip-address: true
     hostname: localhost
